force-app/main/default/objects/AllergyIntolerance__c/AllergyIntolerance__c.object-meta.xml
<CustomObject>
    <label>Allergy Intolerance</label>
    <nameField>
        <label>Allergy Intolerance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allergy Intolerances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>