force-app/main/default/objects/AllergyIntolerance__c/fields/Allergen_Code__c.field-meta.xml
<CustomField>
    <fullName>Allergen_Code__c</fullName>
    <label>Allergen Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>