force-app/main/default/objects/AllergyIntolerance__c/fields/Allergen_Code_System__c.field-meta.xml
<CustomField>
    <fullName>Allergen_Code_System__c</fullName>
    <description>Typical code systems for allergens are RxNorm and SNOMED. Global value set defaults are package-wide, so they are not marked default on LogicEMR_Code_System.</description>
    <label>Allergen Code System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LogicEMR_Code_System</valueSetName>
    </valueSet>
</CustomField>