force-app/main/default/objects/AllergyIntolerance__c/fields/Allergen_Display__c.field-meta.xml
<CustomField>
    <fullName>Allergen_Display__c</fullName>
    <label>Allergen Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>