force-app/main/default/objects/AllergyIntolerance__c/fields/Allergen_Ref__c.field-meta.xml
<CustomField>
    <fullName>Allergen_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Canonical Code Reference. Allergen_Display__c and Allergen_Code__c remain snapshot fields populated at selection.</description>
    <label>Allergen</label>
    <referenceTo>Code_Reference__c</referenceTo>
    <relationshipLabel>Allergies</relationshipLabel>
    <relationshipName>Allergies</relationshipName>
    <type>Lookup</type>
</CustomField>