force-app/main/default/objects/AllergyIntolerance__c/fields/Clinical_Status__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Status__c</fullName>
    <label>Clinical Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>