force-app/main/default/objects/AllergyIntolerance__c/fields/Encounter__c.field-meta.xml
<CustomField>
    <fullName>Encounter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Encounter</label>
    <referenceTo>Encounter__c</referenceTo>
    <relationshipLabel>Allergies</relationshipLabel>
    <relationshipName>Allergies</relationshipName>
    <type>Lookup</type>
</CustomField>