force-app/main/default/objects/AllergyIntolerance__c/fields/Onset_Date__c.field-meta.xml
<CustomField>
    <fullName>Onset_Date__c</fullName>
    <label>Onset Date</label>
    <type>Date</type>
</CustomField>