force-app/main/default/objects/AllergyIntolerance__c/fields/Reaction__c.field-meta.xml
<CustomField>
    <fullName>Reaction__c</fullName>
    <label>Reaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>