force-app/main/default/objects/AllergyIntolerance__c/listViews/Active_Allergies.listView-meta.xml
<ListView>
    <fullName>Active_Allergies</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Allergen_Display__c</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>Criticality__c</columns>
    <columns>Clinical_Status__c</columns>
    <columns>Onset_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Clinical_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Allergies</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>