force-app/main/default/objects/AllergyIntolerance__c/listViews/All_Allergies.listView-meta.xml
<ListView>
    <fullName>All_Allergies</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Allergen_Display__c</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>Criticality__c</columns>
    <columns>Clinical_Status__c</columns>
    <columns>Onset_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Allergies</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>